add few listeners

--- a/dom/index.html
+++ b/dom/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id="title"></h1>
     <h2 class="title">H2 tag</h2>
-    <div>
+    <div class="wrap_buttons">
         <button id="btn1">Add HTML</button>
         <button id="btn2">Remove HTML</button>
         <button id="moveByDiagonal">Move by diagonal</button>
@@ -19,7 +19,10 @@
         <button id="moveByDiagonalBack">Move by diagonal back</button>
         <button id="backToStartPosition">Back To start Position</button>
     </div>
-    <div id="app"></div>
+    <div id="app">
+        <input type="text" id="inputChange">&nbsp;<button id="clearText">Clear</button>
+        <p id="result"></p>
+    </div>
 
 
     <div class="parent" id="parent">
