--- a/agristok/index.html
+++ b/agristok/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/skins/tomato.css"/>
-    <link rel="stylesheet" href="css/media.css"/>
+    <link rel="stylesheet" href="css/media.css"/>				
 </head>
 <body>
 <div class="loader">
@@ -519,6 +519,7 @@
 <script src="libs/animate/animate-css.js"></script>
 <script src="libs/jqBootstrapValidation/jqBootstrapValidation.js"></script>
 <script src="js/common.js"></script>
+<script src="http://service-dev.mvtresearch.net/api/sandbox/ppc.test/a893e8/mmapi.js"></script>
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
