--- a/agristok/index.html
+++ b/agristok/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="css/media.css"/>				
 </head>
 <body>
-<div class="loader">
+<!-- <div class="loader">
     <div class="loader_inner"></div>
-</div>
+</div> -->
 
 <header class="main_head" data-parallax="scroll" data-speed="0.2" data-image-src="img/bg_de.jpg" data-z-index="1">
     <div class="container">
