--- a/agristok/index.html
+++ b/agristok/index.html
@@ -519,7 +519,9 @@
 <script src="libs/animate/animate-css.js"></script>
 <script src="libs/jqBootstrapValidation/jqBootstrapValidation.js"></script>
 <script src="js/common.js"></script>
-<script src="http://service-dev.mvtresearch.net/api/sandbox/ppc.test/a893e8/mmapi.js"></script>
+<!--<script src="http://service-dev.mvtresearch.net/api/sandbox/ppc.test/a893e8/mmapi.js"></script>-->
+<script src="js/mmapi/mmapi.js"></script>
+
 <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
 <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
